@@ -1,9 +1,10 @@
-In this file, i try to keep track of important chnages to my library, most importantly, changes 
+In this file, i try to keep track of important changes to my library, most importantly, changes 
 that break client code.
 
 
 Client-Code-Breaking Changes:
 
+2020/05/08: rsOnePoleFilter::applyBidirectionally: renamed to applyForwardBackward
 2019/11/26: renamed rsSpectrogram to rsSpectrogramProcessor
 2019/10/20: rsLine2D: changed output parameters from references to pointers
 2019/10/11: rapt::rsArray: renamed areBuffersApproximatelyEqual to almostEqual
